# metal-float64

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
adapters/acpp_metal/: CMakeLists.txt
adapters/acpp_metal/cmake/: rewrite_sleef_include.cmake  stage_internal_fenv.cmake
bench/: CMakeLists.txt  README.md  baseline.json  bench_compare.cpp  bench_soft_fp64.cpp  compare.py  fetch_external.cmake  fetch_external.sh
cmake/: soft_fp64.pc.in  soft_fp64Config.cmake.in
fuzz/: CMakeLists.txt  README.md  exhaustive_f32_f64_roundtrip.cpp  fuzz_arithmetic.cpp  fuzz_fcmp.cpp  fuzz_narrow_int.cpp  fuzz_remainder.cpp  fuzz_rounding_modes.cpp  fuzz_sqrt_fma.cpp  fuzz_transcendental.cpp
include/soft_fp64/: defines.h  double.h  rounding_mode.h  soft_f64.h  soft_fp64.h  vec.h
scripts/: check_no_host_fp.sh  coverage.sh  test_install.sh
src/: arithmetic.cpp  classify.cpp  compare.cpp  convert.cpp  fenv.cpp  internal.h  internal_arith.h  internal_classify.h  internal_fenv.h  rounding.cpp  sqrt_fma.cpp
src/sleef/: NOTICE  sleef_common.h  sleef_exp_log.cpp  sleef_fe_macros.h  sleef_internal.h  sleef_inv_hyp_pow.cpp  sleef_stubs.cpp  sleef_trig.cpp
tests/: CMakeLists.txt  host_oracle.h  test_arithmetic_exact.cpp  test_classify.cpp  test_compare_all_predicates.cpp  test_convert_subnormal.cpp  test_convert_widths.cpp  test_coverage_mpfr.cpp  test_fenv.cpp  test_fenv_threads.cpp  test_hypot_scaling.cpp  test_powr_ieee754.cpp  test_rounding_edges.cpp  test_rounding_modes.cpp  test_scaffold.cpp  test_sqrt_fma_exact.cpp  test_transcendental_1ulp.cpp
tests/experimental/: CMakeLists.txt  experimental_precision.cpp
tests/mpfr/: CMakeLists.txt  test_mpfr_diff.cpp
tests/testfloat/: CMakeLists.txt  platform.h  run_testfloat.cpp
